--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,32 @@
 <div class="bg-wave p-grid p-nogutter container">
   <div class="p-col-12 p-pt-5">
     <form class="p-formgroup-inline p-jc-between">
-      <div class="p-field p-col">
-        <p-dropdown placeholder="Select a City" optionLabel="name" [showClear]="true"></p-dropdown>
+      <div class="p-field">
+        <p-dropdown styleClass="custom-select" [options]="filterOptions" optionLabel="label"
+                    dataKey="value"></p-dropdown>
       </div>
-      <div class="p-field p-col p-px-0 p-mx-0 p-text-right">
+      <div class="p-field  p-px-0 p-mx-0 p-text-right">
         <input pInputText type="text" placeholder="Buscar...">
       </div>
     </form>
+  </div>
+  <div *ngFor="let book of (this.books$ | async)" class="p-col p-mb-3">
+    <p-card
+            styleClass="p-card-shadow"
+            [style]="{width: '360px'}"
+    >
+      <p-header>
+        <img alt="Card" [src]="book.img">
+      </p-header>
+      <h3 class="p-my-1 p-text-light p-text-truncate">
+        {{book.title}}
+      </h3>
+      <p>
+        {{book.description}}
+      </p>
+      <p>
+        ❤ {{book.likes | number}}
+      </p>
+    </p-card>
   </div>
 </div>
