new form to create books

--- a/src/app/app-shared/navbar/navbar.component.html
+++ b/src/app/app-shared/navbar/navbar.component.html
@@ -5,6 +5,6 @@
     >Libros Swisher</a>
   </div>
   <div>
-    <button pButton pRipple type="button" label="Agregar Libro" class="p-button-raised custom-primary-button"></button>
+    <button (click)="goToNew()" pButton pRipple type="button" label="Agregar Libro" class="p-button-raised custom-primary-button"></button>
   </div>
 </div>
