--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -9,3 +9,15 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+.viewport {
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+}
+
+.card-img {
+  width: 100%;
+  height: 400px;
+  border-radius: 3px 3px 0 0;
+}
