--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,7 +27,7 @@
               {{book.title}}
             </h3>
             <p>
-              {{book.description}}
+              {{book.synopsis}}
             </p>
             <p>
               ❤ {{book.likes | number}}
