--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,12 @@
   <div class="p-col-12">
     <app-navbar></app-navbar>
   </div>
+
   <div class="p-col-12">
     <router-outlet></router-outlet>
   </div>
   <div class="p-col-12">
     <app-footer></app-footer>
   </div>
+  <p-toast position="bottom-center"></p-toast>
 </div>
