--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -5,7 +5,6 @@
   background-repeat: no-repeat;
 }
 
-
 ::-webkit-scrollbar {
   display: none;
 }
@@ -18,6 +17,13 @@
 
 .card-img {
   width: 100%;
-  height: 400px;
+  height: 320px;
   border-radius: 3px 3px 0 0;
+}
+
+.m-top {
+  margin-top: 15rem;
+}
+
+.w-100 {
 }
