design for single view page

--- a/src/app/pages/form-book/form-book.component.html
+++ b/src/app/pages/form-book/form-book.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="save()" [formGroup]="form">
-  <div class="container p-component p-grid p-nogutter p-flex-md-column p-align-center p-mb-sm-6 p-mb-lg-0">
+  <div class="container-wrapper container p-component p-grid p-nogutter p-flex-md-column p-align-center p-mb-sm-6 p-mb-lg-0">
     <div class="p-col-12 p-md-6">
-      <h2 class="title p-text-light p-align-center">Agregar un nuevo libro</h2>
+      <h2 class="title p-align-center">Agregar un nuevo libro</h2>
     </div>
     <div class="p-col-12 p-md-6">
       <div class="p-fluid secondary-color">
