--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,9 @@ a:link {
   padding: 0 10%;
 }
 
+.container-wrapper {
+  min-height: calc(100vh - 146px);
+}
 
 .bg-primary-color {
   background-color: #FFA45C !important;
@@ -55,6 +58,16 @@ a:link {
 .p-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight {
   color: #ffffff;
   background-color: var(--primary-color);
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.title {
+  margin-top: 6rem;
+  font-size: 2rem;
+  color: var(--text-color);
 }
 
 .badged-new {
@@ -102,6 +115,7 @@ a:link {
   box-shadow: 0 0 0 0.2rem var(--primary-color-highlight);
   border-color: var(--primary-color) !important;
 }
+
 .p-inputtext:enabled:hover {
   border-color: var(--primary-color) !important;
 }
@@ -121,6 +135,7 @@ a:link {
   width: 80%;
   position: sticky;
 }
+
 .p-selectbutton .p-button.p-highlight, .p-selectbutton .p-button.p-highlight:hover {
   background: var(--primary-color);
   border-color: var(--primary-color);
