--- a/src/app/pages/single-view/single-view.component.html
+++ b/src/app/pages/single-view/single-view.component.html
@@ -1,1 +1,25 @@
-<p>single-view works!</p>
+<div *ngIf="book$ | async as book"
+     class="container-wrapper container p-component p-grid p-flex-wrap p-nogutter p-mb-sm-6 p-mb-lg-0 p-jc-center">
+  <div class="p-col-2 title">
+    <span *ngIf="book.isNew" class="badged-new">Nuevo</span>
+    <img src="{{book.img}}" class="img-responsive">
+  </div>
+  <div class="p-col-4 p-pl-6 secondary-color">
+    <h2 class="title p-mb-1">{{book.title | titlecase}}</h2>
+    <button pButton
+            pRipple
+            type="button"
+            label="❤ 9,999.00"
+            class="p-button-rounded p-button-text p-button-plain like-button-padding"
+    ></button>
+    <p id="synopsis">
+      {{book.synopsis}}
+    </p>
+    <p class="p-mb-3">
+      <strong>Autor:</strong> {{book.author | titlecase}}
+    </p>
+    <div class="p-my-3">
+      <button pButton label="Editar libro" icon="pi pi-pencil" class="p-button-raised custom-primary-button"></button>
+    </div>
+  </div>
+</div>
