--- a/src/styles.css
+++ b/src/styles.css
@@ -147,3 +147,11 @@ a:link {
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem var(--primary-color-highlight);
 }
+
+@media (max-width: 576px) {
+  .title {
+    margin-top: 2.5rem;
+    font-size: 1.4rem;
+    color: var(--text-color);
+  }
+}
