--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,10 @@ a:link {
   color: #5D5D5A !important;
 }
 
+.muted-color {
+  color: #E6E6E6 !important;
+}
+
 .custom-primary-button {
   color: #5D5D5A !important;
   background: #FFA45C !important;
