--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@ a:link {
 }
 
 .primary-color {
-  background-color: #FFA45C !important;
+  color: #FFA45C !important;
 }
 
 .secondary-color {
@@ -74,6 +74,10 @@ a:link {
   color: var(--text-color);
 }
 
+.subtitle-size {
+  font-size: .8rem;
+}
+
 .badged-new {
   padding: 0.3rem 0.5rem;
   background-color: var(--primary-color);
@@ -83,6 +87,11 @@ a:link {
   position: absolute;
   margin-top: .6rem;
   margin-left: .6rem;
+}
+
+.tumb-cover {
+  max-width: 150px;
+  height: auto;
 }
 
 .p-fileupload-buttonbar {
