--- a/src/app/pages/single-view/single-view.component.html
+++ b/src/app/pages/single-view/single-view.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="book$ | async as book"
-     class="container-wrapper container p-component p-grid p-flex-wrap p-flex-sm-column p-flex-lg-row p-nogutter p-mb-sm-6 p-mb-lg-0 p-jc-center">
+<div *ngIf="book$ | async as book; else notFound"
+     class="animate__animated animate__fadeIn container-wrapper container p-component p-grid p-flex-wrap p-flex-sm-column p-flex-lg-row p-nogutter p-mb-sm-6 p-mb-lg-0 p-jc-center">
   <div class="p-lg-2 p-md-8 title">
     <span *ngIf="book.isNew" class="badged-new">Nuevo</span>
     <img src="{{book.img}}" class="img-responsive">
@@ -19,7 +19,14 @@
       <strong>Autor:</strong> {{book.author | titlecase}}
     </p>
     <div class="p-my-3">
-      <button pButton label="Editar libro" icon="pi pi-pencil" class="p-button-raised custom-primary-button"></button>
+      <button (click)="gotToEditBook(book.id)" pButton label="Editar libro" icon="pi pi-pencil" class="p-button-raised custom-primary-button"></button>
     </div>
   </div>
 </div>
+<ng-template #notFound>
+  <div class="p-mt-6 container-wrapper container">
+    <app-not-found>No se encontró ningún título,
+      <a routerLink="/" class="p-text-light">click aquí para volver al inicio</a>
+    </app-not-found>
+  </div>
+</ng-template>
