--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -16,8 +16,10 @@
 }
 
 .card-img {
+  /*max-width: 230px;
+  */
   width: 100%;
-  height: 320px;
+  height:  auto;
   border-radius: 3px 3px 0 0;
 }
 
@@ -25,5 +27,3 @@
   margin-top: 15rem;
 }
 
-.w-100 {
-}
